--- a/SPI-AOI/Views/ModelManagement/GerberTools.xaml
+++ b/SPI-AOI/Views/ModelManagement/GerberTools.xaml
@@ -88,6 +88,12 @@
                             ToolTip="Manual adjust R - XY">
                         <Image Source="../../Resources/Icons/rotation.png"></Image>
                     </Button>
+                    <Button x:Name="btRemovePad"
+                            Click="btRemovePad_Click" Width="35"
+                            Height="35" Margin="5,0,5,0"
+                            ToolTip="Remove Pad (Ctrl + X)">
+                        <Image Source="../../Resources/Icons/x_red2.png"></Image>
+                    </Button>
                     <Button x:Name="btSelectPad"
                             Click="btSelectPad_Click" Width="35"
                             Height="35" Margin="5,0,5,0"
@@ -115,7 +121,7 @@
                     <Button x:Name="btDeleteLinkPad" 
                             Click="btDeleteLinkPad_Click" Width="35"
                             Height="35" Margin="5,0,5,0"
-                            ToolTip="Remove Pad Name">
+                            ToolTip="Remove Link Pad">
                         <Image Source="../../Resources/Icons/-icon.png"></Image>
                     </Button>
                     <Button x:Name="btPadSettings" 
