--- a/SPI-AOI/Views/WaitingForm.xaml
+++ b/SPI-AOI/Views/WaitingForm.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SPI_AOI.Views"
         mc:Ignorable="d"
-        Title="WaitingForm" WindowStartupLocation="CenterScreen" Background="#FFF0F0F0" Height="100" Width="270" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None">
+        Title="WaitingForm" WindowStartupLocation="CenterScreen" Background="#FFF0F0F0" Height="120" Width="350" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="None">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -13,12 +13,14 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <DockPanel>
-                <Label x:Name="lbStatus" Margin="0,10,0,0" Content="Processing..." FontSize="15" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
+                <Label x:Name="lbStatus" Margin="0,10,0,0" Content="Processing..." FontSize="15" FontWeight="Bold"
+                       HorizontalAlignment="Center" VerticalAlignment="Center" Height="50"
+                       HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Label>
             </DockPanel>
         </Grid>
         <Grid Grid.Row="1">
             <DockPanel>
-                <ProgressBar Width="150" Margin="0,0,0,10" Height="30" Foreground="#FF06B025" IsIndeterminate="True" LargeChange="0"/>
+                <ProgressBar Width="236" Margin="0,10,0,20" Height="30" Foreground="#FF06B025" IsIndeterminate="True" LargeChange="0"/>
             </DockPanel>
         </Grid>
     </Grid>
